Fixed alignment issues, height overflow issues and added the AddChannel popup

--- a/app/global.css
+++ b/app/global.css
@@ -4,7 +4,5 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
-    padding: 0;
-    
     display: flex;
 }
