--- a/app/register/Register.module.css
+++ b/app/register/Register.module.css
@@ -1,4 +1,9 @@
 .background {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
     height: 100%;
     display: flex;
     justify-content: center;
